# realworld-axum-api

./: .env.example  Cargo.toml
migrations/: 20251103051920_create_users_table.sql  20251201045828_create_email_verification_tokens.sql  20251201051539_add_email_verified_to_users.sql  20251213121842_create_password_reset_tokens.sql  20251215050813_create_refresh_tokens.sql  20260101034443_add_token_rotation_fields.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  repositories.rs  schemas.rs  state.rs
src/auth/: jwt.rs  middleware.rs
src/handlers/: auth.rs  health.rs
src/models/: email_verification_token.rs  refresh_token.rs  user.rs
src/repositories/: email_verification_repository.rs  password_reset_repository.rs  refresh_token_repository.rs  traits.rs  user_repository.rs
src/schemas/: auth_schemas.rs  mod.rs  password_reset_schemas.rs  user_schemas.rs
src/services/: email_service.rs
src/utils/: token_generator.rs
