[package]
name = "realworld-axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core web framework
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

#UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"
